hphp/test/slow/php7_backported/scalar-types/scalar_reserved2_use.php.expectf

Fatal error: A name is expected here. in %s/scalar_reserved2_use.php on line 3
